; ModuleID = '/home/carl/AnghaBench/hashcat/src/extr_terminal.c_tty_getchar.c'
source_filename = "/home/carl/AnghaBench/hashcat/src/extr_terminal.c_tty_getchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i64 }

@stdin = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tty_getchar() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca %struct.timeval, align 8
  %4 = alloca i32, align 4
  %5 = call i32 @FD_ZERO(i32* %2)
  %6 = load i32, i32* @stdin, align 4
  %7 = call i32 @fileno(i32 %6)
  %8 = call i32 @FD_SET(i32 %7, i32* %2)
  %9 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 0
  store i32 1, i32* %9, align 8
  %10 = getelementptr inbounds %struct.timeval, %struct.timeval* %3, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = call i32 @select(i32 1, i32* %2, i32* null, i32* null, %struct.timeval* %3)
  store i32 %11, i32* %4, align 4
  %12 = load i32, i32* %4, align 4
  %13 = icmp eq i32 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %0
  store i32 0, i32* %1, align 4
  br label %21

15:                                               ; preds = %0
  %16 = load i32, i32* %4, align 4
  %17 = icmp eq i32 %16, -1
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 -1, i32* %1, align 4
  br label %21

19:                                               ; preds = %15
  %20 = call i32 (...) @getchar()
  store i32 %20, i32* %1, align 4
  br label %21

21:                                               ; preds = %19, %18, %14
  %22 = load i32, i32* %1, align 4
  ret i32 %22
}

declare dso_local i32 @FD_ZERO(i32*) #1

declare dso_local i32 @FD_SET(i32, i32*) #1

declare dso_local i32 @fileno(i32) #1

declare dso_local i32 @select(i32, i32*, i32*, i32*, %struct.timeval*) #1

declare dso_local i32 @getchar(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
